fixed hero-secton ng image not visible bug

--- a/Style/style.css
+++ b/Style/style.css
@@ -136,7 +136,7 @@
 
         .hero {
             padding: 80px 0;
-            background-image: url(assets/hero-bg.png);
+            background-image: url(../assets/hero-bg.png);
             background-size: cover;
             background-position: center;
             text-align: center;
